--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,11 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="GalleryTheme" parent="AppTheme">
+        <item name="colorPrimaryDark">@android:color/black</item>
+        <item name="android:windowBackground">@android:color/black</item>
+    </style>
+
     <style name="ToolbarDark" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
     </style>
 
